// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PipelineCodeBuildConstruct > Snapshot Tests > should match snapshot for basic configuration 1`] = `
{
  "Outputs": {
    "TestConstructProjectArn41A30C71": {
      "Description": "ARN of CodeBuild project test-build-project",
      "Export": {
        "Name": "test-build-project-Arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "TestConstructProjectB6585155",
          "Arn",
        ],
      },
    },
    "TestConstructProjectName444982FD": {
      "Description": "Name of CodeBuild project test-build-project",
      "Export": {
        "Name": "test-build-project-Name",
      },
      "Value": {
        "Ref": "TestConstructProjectB6585155",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArtifactsBucket2AAC5544": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "test-artifacts-bucket",
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "TestConstructLogGroupBE5B7B1B": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/codebuild/test-build-project",
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestConstructProjectB6585155": {
      "Properties": {
        "Artifacts": {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": {
          "Modes": [
            "LOCAL_SOURCE_CACHE",
            "LOCAL_DOCKER_LAYER_CACHE",
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "Description": "CodeBuild project for test environment - test-build-project",
        "EncryptionKey": "alias/aws/s3",
        "Environment": {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:7.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "LogsConfig": {
          "CloudWatchLogs": {
            "GroupName": {
              "Ref": "TestConstructLogGroupBE5B7B1B",
            },
            "Status": "ENABLED",
          },
        },
        "Name": "test-build-project",
        "QueuedTimeoutInMinutes": 480,
        "ServiceRole": {
          "Fn::GetAtt": [
            "TestConstructRole207221A1",
            "Arn",
          ],
        },
        "Source": {
          "BuildSpec": "buildspec.yml",
          "Location": "https://github.com/placeholder/placeholder.git",
          "ReportBuildStatus": true,
          "Type": "GITHUB",
        },
        "TimeoutInMinutes": 60,
        "Triggers": {
          "Webhook": false,
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "TestConstructRole207221A1": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "IAM role for CodeBuild project test-build-project",
        "RoleName": "test-build-project-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "TestConstructRoleDefaultPolicy187ADD01": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:logs:us-east-1:123456789012:log-group:/aws/codebuild/test-build-project",
                "arn:aws:logs:us-east-1:123456789012:log-group:/aws/codebuild/test-build-project:*",
              ],
            },
            {
              "Action": [
                "s3:GetObject",
                "s3:GetObjectVersion",
                "s3:PutObject",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "ArtifactsBucket2AAC5544",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:GetBucketAcl",
                "s3:GetBucketLocation",
                "s3:ListBucket",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArtifactsBucket2AAC5544",
                  "Arn",
                ],
              },
            },
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": "arn:aws:secretsmanager:us-east-1:123456789012:secret:kiro-pipeline-test-*",
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": "arn:aws:iam::123456789012:role/cdk-*",
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "TestConstructLogGroupBE5B7B1B",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:us-east-1:123456789012:log-group:/aws/codebuild/",
                      {
                        "Ref": "TestConstructProjectB6585155",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:us-east-1:123456789012:log-group:/aws/codebuild/",
                      {
                        "Ref": "TestConstructProjectB6585155",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:us-east-1:123456789012:report-group/",
                    {
                      "Ref": "TestConstructProjectB6585155",
                    },
                    "-*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArtifactsBucket2AAC5544",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArtifactsBucket2AAC5544",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestConstructRoleDefaultPolicy187ADD01",
        "Roles": [
          {
            "Ref": "TestConstructRole207221A1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`PipelineCodeBuildConstruct > Snapshot Tests > should match snapshot with custom environment variables 1`] = `
{
  "Outputs": {
    "TestConstructProjectArn41A30C71": {
      "Description": "ARN of CodeBuild project test-build-project",
      "Export": {
        "Name": "test-build-project-Arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "TestConstructProjectB6585155",
          "Arn",
        ],
      },
    },
    "TestConstructProjectName444982FD": {
      "Description": "Name of CodeBuild project test-build-project",
      "Export": {
        "Name": "test-build-project-Name",
      },
      "Value": {
        "Ref": "TestConstructProjectB6585155",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArtifactsBucket2AAC5544": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "test-artifacts-bucket",
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "TestConstructLogGroupBE5B7B1B": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/codebuild/test-build-project",
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestConstructProjectB6585155": {
      "Properties": {
        "Artifacts": {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": {
          "Modes": [
            "LOCAL_SOURCE_CACHE",
            "LOCAL_DOCKER_LAYER_CACHE",
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "Description": "CodeBuild project for production environment - test-build-project",
        "EncryptionKey": "alias/aws/s3",
        "Environment": {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "EnvironmentVariables": [
            {
              "Name": "ENV",
              "Type": "PLAINTEXT",
              "Value": "production",
            },
            {
              "Name": "REGION",
              "Type": "PLAINTEXT",
              "Value": "us-east-1",
            },
          ],
          "Image": "aws/codebuild/standard:7.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "LogsConfig": {
          "CloudWatchLogs": {
            "GroupName": {
              "Ref": "TestConstructLogGroupBE5B7B1B",
            },
            "Status": "ENABLED",
          },
        },
        "Name": "test-build-project",
        "QueuedTimeoutInMinutes": 480,
        "ServiceRole": {
          "Fn::GetAtt": [
            "TestConstructRole207221A1",
            "Arn",
          ],
        },
        "Source": {
          "BuildSpec": "buildspec-prod.yml",
          "Location": "https://github.com/placeholder/placeholder.git",
          "ReportBuildStatus": true,
          "Type": "GITHUB",
        },
        "TimeoutInMinutes": 60,
        "Triggers": {
          "Webhook": false,
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "TestConstructRole207221A1": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "IAM role for CodeBuild project test-build-project",
        "RoleName": "test-build-project-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "TestConstructRoleDefaultPolicy187ADD01": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:logs:us-east-1:123456789012:log-group:/aws/codebuild/test-build-project",
                "arn:aws:logs:us-east-1:123456789012:log-group:/aws/codebuild/test-build-project:*",
              ],
            },
            {
              "Action": [
                "s3:GetObject",
                "s3:GetObjectVersion",
                "s3:PutObject",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "ArtifactsBucket2AAC5544",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:GetBucketAcl",
                "s3:GetBucketLocation",
                "s3:ListBucket",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArtifactsBucket2AAC5544",
                  "Arn",
                ],
              },
            },
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": "arn:aws:secretsmanager:us-east-1:123456789012:secret:kiro-pipeline-production-*",
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": "arn:aws:iam::123456789012:role/cdk-*",
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "TestConstructLogGroupBE5B7B1B",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:us-east-1:123456789012:log-group:/aws/codebuild/",
                      {
                        "Ref": "TestConstructProjectB6585155",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:us-east-1:123456789012:log-group:/aws/codebuild/",
                      {
                        "Ref": "TestConstructProjectB6585155",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:us-east-1:123456789012:report-group/",
                    {
                      "Ref": "TestConstructProjectB6585155",
                    },
                    "-*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArtifactsBucket2AAC5544",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArtifactsBucket2AAC5544",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestConstructRoleDefaultPolicy187ADD01",
        "Roles": [
          {
            "Ref": "TestConstructRole207221A1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
